--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Welcome to branch 1</h1>
         <h2>Welcome to branch 2</h2>
+        <h3>Welcome to branch 3</h3>
     </body>
 </html>
